--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -13,11 +14,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.2",
     "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "express-async-handler": "^1.2.0",
+    "framer-motion": "^9.0.2",
     "jquery": "^3.6.3",
     "jsonwebtoken": "^9.0.0",
+    "mdb-react-ui-kit": "^5.1.0",
     "mongoose": "^6.8.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
